# qa-crawler

./: cleanup.sh  crawl.sh  pyproject.toml  search.sh  setup.sh
qa-crawler/: .gitignore  AGENTS.md  pyproject.toml  requirements.txt
qa-crawler/backend/: README_retry.md  app.py  block_map_search.html  crawl.py  diff-checker.py  diff_urls.json  find_block_by_classes.py  requirements.txt  search.py  search_block_map.py
qa-crawler/backend/loggers/: dom_logger.py  failure_logger.py  logger.py  screenshot_logger.py  source_logger.py
qa-crawler/backend/sitemaps/: blog_sitemap.json  default_sitemap.json
qa-crawler/crawler/data/: domains.json
qa-crawler/crawler/data/sitemaps/: all_domain_sitemap.json
qa-crawler/crawler/output/2025-09-11/: block_map.json
qa-crawler/crawler/output/block_maps/: block-map-07204932142b.json  block-map-0c2aec231ec5.json  block-map-0d8d5a1ead69.json  block-map-1041b5098d44.json  block-map-12b3d5cc1d23.json  block-map-1da1597a050a.json  block-map-229615f98140.json  (+34 more)
qa-crawler/crawler/scripts/: search_block_map.py  sync_block_map.py  sync_from_gcs.py
qa-crawler/crawler/tests/: test_crawl_config.py  test_lambda_search.py  test_search_block_map.py
qa-crawler/data/sitemaps/: default_sitemap.json  sitemap.json  test_sitemap.json
qa-crawler/past_block_maps/2025-09-25/: block_map.json
qa-crawler/scripts/: download_from_s3.py  find_block_by_classes.py  sync_block_map.py  sync_block_map_s3.py
qa-crawler/src/qa_crawler/: config.py  crawl.py  search.py  sync.py
qa-crawler/tests/: test_search_block_map.py  test_sync_block_map.py
(+21 files in other folders)
